--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 <!----------------------about------------------------------->
 
-    <div id="about">
+    <div id="about" class="block">
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
@@ -67,7 +67,7 @@
         </div>
     </div>
  <!---------------------------------service---------------------------------->  
-<div id="services">
+<div id="services" class="block">
     <div class="container">
         <h1 class="sub-title">My Services</h1>
         <div class="services-list">
@@ -82,7 +82,7 @@
     </div>
 </div>
 <!--------portfolio------>
-<div id="portfolio">
+<div id="portfolio" class="block">
     <div class="container">
         <h1 class="sub-title">My Work</h1>
         <div class="work-list">
@@ -107,7 +107,7 @@
     </div>
 </div>
 <!-----contact----->
-<div id="contact">
+<div id="contact" class="block">
     <div class="container">
         <div class="row">
             <div class="contact-left">
