--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
                     <h1><span class="n1">Sujith</span> Kumar</h1>
                     <p>And I'm <span class="job">Web Designer</span></p>
                 </div>
-                
             </div>
         </div>
     </div>
@@ -75,7 +74,7 @@
                 <i class="fa-solid fa-code"></i>
                 <h2>Web Design</h2>
                 <p> I offer custom web design services that help individuals and businesss establish a strong online presence. My focus is on creating responsive, visually appealing, and user-friendly websites that align with your brand and goals.</p>
-                <a href="work.html">Learn more</a>
+                <a href="services/service.html">Learn more</a>
             </div>
 
         </div>
