--- a/work/work.html
+++ b/work/work.html
@@ -24,6 +24,6 @@
 <body>
     <i class="fa-solid fa-person-digging"></i>
     <h1>Sorry, This Page is Not Construction</h1>
-    <p>Please go to Home.<a href="index.html">Click Here</a></p>
+    <p>Please go to Home.<a href="../index.html">Click Here</a></p>
 </body>
 </html>
