--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p class="about-cont">Hi, I,m a passionate and creative web designer just starting my journey in the world of web development. 
-                        I specialize in designing clean, responsive, and user-friendly websites using HTML, CSS, and basic JavaScript. 
-                        I enjoy turning ideas into vidually appeding digital experiences and am constantly learning new technologies to improve my skill.
+                    <p class="about-cont">Hi, I’m a passionate and creative web designer just starting my journey in the world of web development. I specialize in designing clean, responsive, and user-friendly websites using HTML, CSS, and basic JavaScript I enjoy turning ideas into visually appending digital experiences and am constantly learning new technologies to improve my skill.
                     </p>
                     <div class="tab-title">
                         <div class="tab-links active-link" onclick="opentab('skills')">Skills</div>
@@ -116,7 +114,7 @@
                 <div class="social-icons">
                     <a href="https://www.linkedin.com/in/sujith-kumar-a99ab7319?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
-                <a href="work.html" alt="sorry" class="btn btn2">Download CV</a>
+                <a href="objects/Documents/CV Resume.pdf" download class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
