add mail option

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                 <p><i class="fa-solid fa-phone"></i> +917339127661</p>
                 <div class="social-icons">
                     <a href="https://www.linkedin.com/in/sujith-kumar-a99ab7319?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="mailto:sujith.dev17@gmail.com"><i class="fa-solid fa-envelope"></i></a>
                 </div>
                 <a href="objects/Documents/CV Resume.pdf" download class="btn btn2">Download CV</a>
             </div>
