--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>Web Designing</span><br>I possess a strong foundation in web design, combining creativity with technical expertise to build user-friendly and visually engaging websites.</li>
+                            <li><span>Web Designing</span><br>Design creative, user-friendly, and Responsive Websites.</li>
+                            <li><span>Ui & Ux design</span><br>Designing colourful and creative web & web application</li>
                             <li><span>Github</span><br>I can work with other Developers.</li>
                         </ul>
                     </div>
