--- a/work/work.html
+++ b/work/work.html
@@ -6,24 +6,31 @@
     <title>Projects</title>
     <script src="https://kit.fontawesome.com/0db88a9e7d.js" crossorigin="anonymous"></script>
     <style>
-        body{
-            text-align: center;
-            font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-        h1{
-            color: rgb(129, 129, 125);
-        }
-        i{
+    *{
+        width:100%;
+        margin: 0;
+        font-family:'montserrat', sans-serif;
+        box-sizing: border-box;
+    }
+    body{
+        background-color: #000;
+        color: #fff;
+    }
+    .home{
         color: #ffb81c;
-        font-size: 45px;
-        margin-top: 10px;
-        text-shadow: 0 0 2px #000;
-        }
+        margin-right: 20px;
+    }
+    .header-text{
+        margin-left: 20pxpx;
+        margin-top: 20px;
+        font-size: 50px;
+    }
     </style>
 </head>
 <body>
-    <i class="fa-solid fa-person-digging"></i>
-    <h1>Sorry, This Page is Not Construction</h1>
-    <p>Please go to Home.<a href="../index.html">Click Here</a></p>
+    <div class="header">
+        <h1 class="header-text"><a href="../index.html" class="home"><i class="fa-solid fa-arrow-left"></i></a>
+        <span>Works</span></h1>
+    </div>
 </body>
 </html>
